--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "firebase": "^10.11.1",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -46,6 +48,8 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.12"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/leaflet": "^1.9.12",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
