--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "react-mui-demo",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "main": "src/config/firebase-config.js",
   "dependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/plugin-syntax-flow": "^7.24.1",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +28,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
