--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/leaflet": "^1.9.12",
+    "@types/lodash": "^4.17.0",
     "@types/react-router-dom": "^5.3.3"
   }
 }
